<resources>
    <string name="app_name">AWAS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">News</string>
    <string name="menu_slideshow">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_string">Settings</string>
    <string name="KST">Kartu Studi Tetap</string>
    <string name="kalender">Kalender</string>
    <string name="jadwal_kuliah">Jadwal Kuliah</string>
    <string name="nilai_mahasiswa">Nilai Mahasiswa</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="notification">notification</string>
    <string name="berita">Berita</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="check_remember" />
</resources>